--- a/src/styles.css
+++ b/src/styles.css
@@ -71,6 +71,7 @@ text {
     pointer-events: none;
     background-color: rgba(255, 255, 255, 0.8);
     box-shadow: white 0 0 1px, white 0 0 1px;
+    opacity: 0;
 }
 .ldvm-tooltip div {
     padding: 5px;
